Create basic functions and working prototype

--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sketchpad</title>
     <script src="./script.js" defer></script>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div id="sketchGrid">
-        
+    <div id="buttons">
+        <button id="setCount">set grid count</button>
+        <button id="reset">reset grid</button>
+        <span>Current grid size: <span class="gridCountNumber">0</span> x <span class="gridCountNumber">0</span> — click and drag on grid to draw</span>
+    </div>
+    <div id="sketchContainer">
+    
     </div>
 </body>
 </html>
