Add support for various modes
basic, rainbow, and shader modes are now available and working. User
can randomize color. Color picker button is added but not yet functional.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         <button id="reset">reset grid</button>
         <span>Current grid size: <span class="gridCountNumber">0</span> x <span class="gridCountNumber">0</span> — click and drag on grid to draw</span>
     </div>
+    <div id="modeButtons">
+        <button id="colorPicker">select color</button>
+        <button id="randomColor">randomize color</button>
+        <button id="rainbow">rainbow mode</button>
+        <button id="shader">shader mode</button>
+    </div>
     <div id="sketchContainer">
     
     </div>
